--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,12 @@
   background-color: black;
 }
 
+.photo-profile {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .profile img {
   transition: filter 0.4s ease-in-out;
 }
